# qrlabel

./: .gitignore  Dockerfile  README.md  cdk.json  cdk.py  pyproject.toml  qrgen.py  qrlabel.py
.github/workflows/: check.yml  deploy.yml
tests/unit/: test_cdk.py  test_qrlabel.py
